# EndurancePy

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  integration.yml  probe-alkamel.yml  release.yml
docs/: analyse_fastf1.md  plan_implementation.md  plotting.md  usage.md
examples/: README.md  lap_analysis.py  plot_lap_evolution.py  plot_pace_by_class.py  plot_race_trace.py  plot_strategy.py  quickstart.ipynb  quickstart.py  schedule_example.py  standings_example.py
src/endurancepy/: __init__.py  _types.py  cache.py  core.py  events.py  exceptions.py  logger.py  plotting.py  results.py  standings.py  strategy.py  track_status.py  utils.py
src/endurancepy/alkamel/: __init__.py  analysis.py  classification.py  client.py  discovery.py  headers.py  timecards.py  timeparse.py  weather.py
src/endurancepy/plotting/: __init__.py  charts.py  colors.py  style.py
src/endurancepy/regulations/: __init__.py
src/endurancepy/regulations/data/ELMS/: 2024.yaml
src/endurancepy/regulations/data/IMSA/: 2024.yaml
src/endurancepy/regulations/data/WEC/: 2023.yaml  2024.yaml
tests/: conftest.py  test_analysis.py  test_cache.py  test_classification.py  test_client.py  test_discovery.py  test_discovery_resolve.py  test_events.py  test_examples.py  test_integration_network.py  test_load.py  test_plotting.py  test_regulations.py  test_results.py  test_seasons.py  test_smoke.py  test_standings.py  test_strategy.py  test_track_status.py  test_utils.py  test_weather.py
tests/fixtures/: analysis_sample.csv  classification_race_sample.csv  weather_sample.csv
