[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endurancepy"
version = "0.0.0"
description = "Access endurance racing timing & results data in Python — inspired by FastF1."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Romain Flambard" }]
keywords = [
    "endurance",
    "motorsport",
    "racing",
    "WEC",
    "IMSA",
    "ELMS",
    "Le Mans",
    "timing",
    "pandas",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.23",
    "requests>=2.28",
    "requests-cache>=1.1",
    "pyarrow>=14.0",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.6"]
pdf = ["pdfplumber>=0.10"]
live = ["python-socketio[client]>=5.10"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.8",
    "pandas-stubs",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/RomainFl50/EndurancePy"
Repository = "https://github.com/RomainFl50/EndurancePy"
Issues = "https://github.com/RomainFl50/EndurancePy/issues"
Changelog = "https://github.com/RomainFl50/EndurancePy/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/endurancepy"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "network: tests that require network access (deselect with -m 'not network')",
]
