[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endurancepy"
version = "0.2.0"
description = "Access endurance racing timing & results data in Python — inspired by FastF1."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Romain Flambard" }]
keywords = [
    "endurance",
    "motorsport",
    "racing",
    "WEC",
    "IMSA",
    "ELMS",
    "Le Mans",
    "timing",
    "pandas",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.23",
    "requests>=2.28",
    "requests-cache>=1.1",
    "pyarrow>=14.0",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.6"]
interactive = ["plotly>=5.18"]
regulations = ["pyyaml>=6"]
pdf = ["pdfplumber>=0.10"]
live = ["python-socketio[client]>=5.10"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.8",
    "types-requests",
    "pyyaml>=6",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/RomainFl50/EndurancePy"
Repository = "https://github.com/RomainFl50/EndurancePy"
Documentation = "https://github.com/RomainFl50/EndurancePy/tree/main/docs"
Issues = "https://github.com/RomainFl50/EndurancePy/issues"
Changelog = "https://github.com/RomainFl50/EndurancePy/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/endurancepy"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.per-file-ignores]
# Tests contain long, literal Al Kamel result paths used as fixtures.
"tests/test_discovery*.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
ignore_missing_imports = true
# Several dependencies (requests_cache, pyarrow, rapidfuzz, matplotlib, ...) ship
# no type information; don't fail on their untyped imports.
disable_error_code = ["import-untyped"]
no_implicit_optional = true

# This is a pandas-heavy library. The third-party `pandas-stubs` are very strict
# and their exact types vary between releases, which makes type-checking against
# them non-deterministic across environments. Treat pandas as untyped (Any) so
# CI is reproducible; our own logic is still fully type-checked.
[[tool.mypy.overrides]]
module = ["pandas", "pandas.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "network: tests that require network access (deselect with -m 'not network')",
]
